samples/_failures_safe/1761432104_a16c0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d25e4f2f.c: In function ‘main’:
./samples/SAFE/__tmp_d25e4f2f.c:146:5: error: expected declaration or statement at end of input
  146 |     operation = read_int("Select operation (1-4): ", 1, 4);
      |     ^~~~~~~~~
